--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.makeramen:roundedimageview:2.3.0'
+    implementation 'com.github.tizisdeepan:eventscalendar:1.6.1'
 }
